# odin

./: .env.example  .gitignore  BLOG_POST.md  BroadPlan.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  docker-compose.lmstudio.yml  docker-compose.yml  odin.code-workspace
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.production  pyproject.toml
backend/app/: __main__.py  config.py  config_file.py  main.py
backend/app/agents/: docs_agent.py  graph.py  llm.py  prompts.py  quality_agent.py  security_agent.py  summary_agent.py
backend/app/api/: github_app.py  routes.py  webhook.py
backend/app/cli/: __init__.py  review.py
backend/app/dataflow/: registry.py  schemas.py  tracker.py  triage.py
backend/app/graph_rag/: _store_ref.py  context_builder.py  extractor.py  models.py  store.py
backend/app/mcp/: server.py  stdio_runner.py
backend/app/models/: enums.py  schemas.py  state.py
backend/app/observability/: logging.py  metrics.py  tracing.py
backend/app/parsers/: languages.py  tree_sitter_parser.py
backend/app/rules/: engine.py  registry.py
backend/app/rules/builtin/: cross_language_rules.py  go_rules.py  java_rules.py  js_rules.py  performance_rules.py  python_rules.py  rust_rules.py
backend/app/services/: _feedback_ref.py  cache.py  feedback.py  github_client.py  provider_registry.py  quality_gate.py  review_store.py  webhook_processor.py
backend/bench/: harness.py  schemas.py  scorer.py
backend/bench/datasets/: clean_corpus.py  secvuleval.py
backend/bench/reports/: leaderboard.md
backend/bench/reports/results/: 2026-04-10-3cd0fa08.json
backend/bench/tools/: codeql.py  common.py  odin.py  semgrep.py
backend/eval/: runner.py
backend/eval/expected/: any_abuse.json  clean_api.json  command_injection.json  complex_function.json  goroutine_leak.json  hardcoded_secrets.json  insecure_deserialization.json  insecure_jwt.json  insecure_random.json  missing_docs.json  prototype_pollution.json  sql_injection.json  ssrf_vulnerable.json  xss_vulnerable.json
backend/eval/samples/go/: clean_code.go  goroutine_leak.go
backend/eval/samples/java/: clean_code.java
backend/eval/samples/javascript/: clean_code.js  insecure_jwt.js  prototype_pollution.js  xss_vulnerable.js
backend/eval/samples/python/: clean_api.py  clean_code.py  command_injection.py  complex_function.py  hardcoded_secrets.py  insecure_deserialization.py  insecure_random.py  missing_docs.py  sql_injection.py  ssrf_vulnerable.py
backend/eval/samples/rust/: clean_code.rs
backend/eval/samples/typescript/: any_abuse.ts  type_safety.ts
backend/tests/: conftest.py  test_agents.py  test_api.py  test_cache.py  test_context_builder.py  test_dataflow_tracker.py  test_extractor.py  test_feedback_taint.py  test_github_app.py  test_github_client.py  test_mcp.py  test_parser.py  test_rules.py  test_synthesizer.py  test_tracing.py  test_webhook.py  test_webhook_processor.py
backend/tests/fixtures/: javascript_bad.js  python_bad.py  python_good.py
cli/: install-hook.sh  odin_review.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AgentProgress.tsx  CodeInput.tsx  FindingCard.tsx  (+5 more)
infra/: cloudbuild.yaml  cloudrun-service.yaml
(+1 files in other folders)
