[project]
name = "odin"
version = "0.1.0"
description = "AI-powered multi-agent code review system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "langfuse>=4.0.0",
    "neo4j>=5.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
odin-mcp = "app.mcp.stdio_runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
exclude = ["tests/fixtures/*"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["E", "I", "N", "SIM", "F", "W", "B"]
"app/agents/prompts.py" = ["E501"]
"app/parsers/tree_sitter_parser.py" = ["E501"]
"app/graph_rag/store.py" = ["E501"]
"tests/*.py" = ["E501"]
"app/rules/builtin/*.py" = ["E501"]
"app/dataflow/registry.py" = ["E501"]
"app/dataflow/tracker.py" = ["E501"]
"app/agents/graph.py" = ["E501"]
"bench/datasets/*.py" = ["E501"]
"bench/harness.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
]
